v0.4 fixed view on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -642,8 +642,13 @@ input:-webkit-autofill:focus {
   .profile-picture-bg {
     background-size: 80%;
   }
+
+  .sobre-mi-container h3 {
+    padding-bottom: 25px;
+  }
+
   #sobre-mi p {
-    margin-bottom: 50px;
+    margin-bottom: 25px;
   }
   .cv-btn {
     width: 120px;
@@ -744,7 +749,7 @@ input:-webkit-autofill:focus {
   }
 
   .menu-items a {
-    font-size: 15px;
+    font-size: 20px;
     color: #292929;
   }
 
@@ -770,7 +775,7 @@ input:-webkit-autofill:focus {
   }
 
   #formacion {
-    padding-top: 80px;
+    padding-top: 190px;
   }
 
   .formacion-title {
@@ -826,12 +831,13 @@ input:-webkit-autofill:focus {
 
   .sobre-mi-container {
     position: absolute;
-    top: 15%;
+    top: 25%;
     padding-bottom: 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
   }
 
   #sobre-mi h3 {
@@ -858,7 +864,7 @@ input:-webkit-autofill:focus {
   }
 
   #formacion {
-    padding-top: 60px;
+    padding-top: 200px;
   }
 
   .formacion-title {
@@ -867,7 +873,7 @@ input:-webkit-autofill:focus {
 
   .enviar {
     bottom: 10%;
-    left: 15%;
+    left: 20%;
   }
 }
 
@@ -890,7 +896,7 @@ input:-webkit-autofill:focus {
   }
 
   .menu-items a {
-    font-size: 12px;
+    font-size: 20px;
   }
 
   .inicio-container {
@@ -985,7 +991,7 @@ input:-webkit-autofill:focus {
   }
 
   #formacion {
-    padding-top: 40px;
+    padding-top: 300px;
   }
 
   .formacion-title {
@@ -998,7 +1004,7 @@ input:-webkit-autofill:focus {
     justify-content: space-evenly;
     width: 90%;
     height: 95%;
-    top: 6%;
+    top: 4%;
     padding: 10px;
   }
 
@@ -1063,7 +1069,7 @@ input:-webkit-autofill:focus {
 
   .enviar {
     bottom: 40px;
-    left: 150px;
+    left: 200px;
     padding: 2px 70px;
     display: block;
   }
@@ -1164,7 +1170,7 @@ input:-webkit-autofill:focus {
   }
 
   #formacion {
-    padding: 100px 10px;
+    padding: 150px 10px;
   }
 
   .formacion-title {
@@ -1209,7 +1215,7 @@ input:-webkit-autofill:focus {
   .proyectos-container {
     width: 95%;
     height: 90%;
-    top: 10%;
+    top: 8%;
     padding: 5px;
   }
 
@@ -1243,7 +1249,7 @@ input:-webkit-autofill:focus {
   .form-mensaje-container {
     position: absolute;
     top: 375px;
-    left: 30px;
+    left: 35px;
     margin-left: 0;
     width: 80%;
     height: 150px;
